@@ -653,6 +653,7 @@ test_player_xm_envelope_zero_loop
 test_player_xm_envelope_set_pos
 test_player_ft2_note_noins_after_keyoff
 test_player_ft2_note_noins_after_invalid_ins
+test_player_ft2_note_off_after_invalid_ins
 test_player_invalid_period
 test_player_invalid_mod_length
 test_player_invalid_mod_channels
